--- a/client/my-react-app/src/components/ViewRecipe/Body.module.css
+++ b/client/my-react-app/src/components/ViewRecipe/Body.module.css
@@ -14,3 +14,14 @@
     text-align: center;
     font-weight: bold;
   }
+
+  .top-head{
+    display: flex;
+    justify-content: space-around;
+    margin: 5px;
+    
+}
+.arrow-button {
+    width: 24px;
+    height: 24px;
+  }
