--- a/client/my-react-app/src/components/PostRecipe/RecipeForm.module.css
+++ b/client/my-react-app/src/components/PostRecipe/RecipeForm.module.css
@@ -6,20 +6,44 @@
   border-radius: 8px;
   background-color: #f9f9f9;
 }
-
+.ingredients{
+  display: flex;
+  align-items: end; /* Aligns items vertically centered */
+  gap: 10px; /* Adjusts the space between elements */
+}
 .formGroup {
   margin-bottom: 15px;
+  position: relative; /* Establishes a positioning context for the label */
+
+  
+}
+.formGroup button#addIngredients{
+  width: 7rem;
+}
+
+.formGroup ul {
+  list-style-type: disc; /* Default bullet points */
+  padding-left: 20px; /* Add padding to the left to make space for bullets */
+  margin: 0; /* Remove default margin */
+}
+li::marker{
+  color: orangered;
 }
 
 .formGroup label {
   display: block;
-  margin-bottom: 5px;
   font-weight: bold;
+  position: absolute; /* Absolute positioning for the label */
+  top: 0; /* Position at the top of the container */
+  left: 0; /* Align to the left of the container */
+  background-color: white; /* Background color to ensure label is visible */
 }
 
 .formGroup input,
 .formGroup textarea {
   width: 100%;
+  margin-top: 1.5em; /* Adds space between the label and the input */
+
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -31,29 +55,31 @@
 }
 
 .formGroup button {
+  display: flex;
+  align-items: center;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
   background-color: #007bff;
   color: white;
-  font-size: 16px;
+  font-size: .9rem;
+  height: 2rem;
+  border-radius: 1rem;
   cursor: pointer;
+  white-space: nowrap;       /* Prevent text wrapping */
+ 
 }
 
+.formGroup button#closeButton {
+background-color: rgb(184, 184, 184);
+}
 .formGroup button:hover {
   background-color: #0056b3;
 }
-.closeButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-  color: #333;
-}
 
-.closeButton:hover {
-  color: #ff0000;
+
+#submitBtn{
+  display: flex;
+  justify-content: space-evenly;
+
 }
