--- a/client/my-react-app/src/components/Login/AdminLogin.module.css
+++ b/client/my-react-app/src/components/Login/AdminLogin.module.css
@@ -16,7 +16,7 @@ body, html {
     position: absolute;
     top: 20px;
     left: 20px;
-    background-color: #007bff; /* Same as Login button */
+    background-color: #6da97a; /* Same as Login button */
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -26,9 +26,7 @@ body, html {
     transition: background-color 0.3s ease;
   }
 
-.return-button:hover {
-  color: #0056b3;
-}
+
 
 /* Flexbox centering */
 .login-container {
@@ -82,16 +80,13 @@ button[type="submit"] {
   padding: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #007bff; /* Blue button */
+  background-color: #6da97a; /* Blue button */
   color: #fff;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
-button[type="submit"]:hover {
-  background-color: #0056b3; /* Darker blue on hover */
-}
 
 /* Error message styling */
 .error-message {
