--- a/client/my-react-app/src/components/PostRecipe/RecipeForm.module.css
+++ b/client/my-react-app/src/components/PostRecipe/RecipeForm.module.css
@@ -4,10 +4,16 @@
   max-width: 600px;
   margin: auto;
   padding: 20px;
- 
   background-color: #2c2c2c; /* Soft dark background */
   color: #e0e0e0; /* Soft light text color */
 }
+.right-half{
+  display: none;
+}
+.itemListView{
+  display: block;
+}
+
 
 /* Ingredients Section */
 .ingredients {
@@ -140,5 +146,25 @@ li::marker {
   /* Desktops */
   @media screen and (min-width: 1024px) {
     /* Styles for desktops */
-  
+  /* Form Container */
+.formContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two columns: first is wider, second is wider */
+  max-width: 100vw;
+  grid-template-areas: 
+  "formGroup right-half";
+ 
+}
+
+.formGroup{
+  grid-area: formGroup;
+}
+.right-half{
+  display: block;
+  grid-area: right-half;
+}
+.itemListView{
+  display: none;
+}
+
   }
